cleaning up repo

--- a/_posts/2016-03-05-Content.md
+++ b/_posts/2016-03-05-Content.md
@@ -7,7 +7,7 @@ author:            jwillmer
 tags:              Jekyll Content Demo
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit..... Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
 
 ## Some great heading (h2)
 
